# ti4-ai

./: .gitignore  .pre-commit-config.yaml  API_DOCUMENTATION.md  ARCHITECTURAL_CHANGES.md  AUDIT_METHODOLOGY.md  AUDIT_QUALITY_ASSURANCE_REPORT.md  AUDIT_VALIDATION_COMPLETE.md  CRITICAL_GAPS_AND_NEXT_STEPS.md  CRITICAL_PATH_IMPLEMENTATION_SEQUENCE.md  DIRECTORY_RESTRUCTURING_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  LRR_ANALYSIS_UPDATE_REQUIREMENTS.md  Makefile  OBJECTIVE_SYSTEM_MIGRATION_COMPLETE.md  PERFORMANCE_CHARACTERISTICS.md  README.md  REFACTORING_ANALYSIS.md  RULE_26_BACKWARD_COMPATIBILITY_VALIDATION_COMPLETE.md  RULE_61_OBJECTIVE_CARDS_IMPLEMENTATION_COMPLETE.md  RULE_83_IMPLEMENTATION_COMPLETE.md  TACTICAL_ACTION_ARCHITECTURE.md  TASK_13_COMPLETION_SUMMARY.md  TEST_COVERAGE_ENHANCEMENT_PLAN.md  TEST_COVERAGE_GAPS_BY_RULE.md  TI4_IMPLEMENTATION_STATUS_AUDIT.md  TI4_IMPLEMENTATION_STATUS_AUDIT_FINAL_DELIVERABLE.md  UNIT_ABILITIES_IMPLEMENTATION.md  USAGE_EXAMPLES.md  coderabbit_review_response.txt  debug_movement.py  fix_all_annotations.py  fix_all_syntax_errors.py  fix_dataclass_syntax.py  fix_param_annotations.py  fix_test_annotations.py  latest_review.json  latest_review.md  latest_review.txt  latest_review_pr11.txt  latest_review_pr11_new.txt  (+29 more)
LRR/: lrr.txt
docs/: README.md  agenda_card_framework_guide.md  agenda_card_troubleshooting_guide.md  agenda_card_usage_examples.md  api_reference.md  dark_energy_tap_reference.md  development_guidelines.md  enum_systems_reference.md  integration_points_guide.md  leader_implementation_guidelines.md  lrr_analysis_01_abilities.md  lrr_analysis_02_action_cards.md  lrr_analysis_03_action_phase.md  lrr_analysis_04_active_player.md  lrr_analysis_05_active_system.md  lrr_analysis_06_adjacency.md  lrr_analysis_98_victory_points.md  lrr_rule_implementation_analysis.md  quick_reference.md  rule_28_transaction_api_guide.md  rule_95_transport_system_guide.md  technology_card_framework_guide.md  validation_requirements.md
scripts/: check_documentation_consistency.py  detect_hardcoded_triggers.py  example_usage.md  fetch_pr_review.py  query_objectives.py  sanitize_csv_files.py  verify_setup.py
src/: __init__.py
templates/: new_ability_template.py  new_condition_validation_template.py
tests/: __init__.py  test_accept_transaction_gamestate_delegation.py  test_action.py  test_action_cards.py  test_agenda_voting_mechanics.py  (+258 more)
(+429 files in other folders)
