[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ti4-game-framework"
version = "0.1.0"
description = "A comprehensive framework for Twilight Imperium 4th Edition"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "TI4 Framework Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ti4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/ti4",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]



[tool.mypy]
python_version = "3.11"
strict = true
explicit_package_bases = true
namespace_packages = true
mypy_path = "src"

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by ruff format
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["B011"]

[dependency-groups]
dev = [
    "hypothesis>=6.138.16",
    "mypy>=1.18.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.0",
    "beartype>=0.18.5", # Runtime type checking
    "typeguard>=4.1.5", # Alternative runtime type checking
    "bandit>=1.8.6",
    "psutil>=5.9.0", # System and process monitoring
    "types-psutil>=7.0.0.20250822",
]
